kubernetes/stateless/hellodemo-ingress-nodeport.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
  labels:
    app: hello
spec:
  backend:
    serviceName: hello-kubernetes
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  labels:
    app: hello-kubernetes
spec:
  type: NodePort
  selector:
    app: hello-kubernetes
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30095
